provision/k8s/apps/olah/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: model-cache
  labels:
    app.kubernetes.io/name: olah
