provision/k8s/apps/olah/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: olah
  namespace: model-cache
  labels:
    app: olah
spec:
  type: ClusterIP
  selector:
    app: olah
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
      name: http
