provision/k8s/apps/olah/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olah
  namespace: model-cache
  labels:
    app: olah
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - olah.colt.chalko.com
      secretName: colt-chalko-wildcard-tls
  rules:
    - host: olah.colt.chalko.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: olah
                port:
                  number: 8090
